feat: add service configurations and fix .gitignore whitelist
- Fixed .gitignore patterns to properly whitelist config files
- Added configuration files for all media server services
- Updated .env.example, docker-compose.yml, and restart.sh

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,10 @@ DOCKERDIR=/home/usuario/media-server
 # IMPORTANTE: Dentro de esta ruta deben existir las carpetas:
 # - media/ (películas, series)
 # - descargas/ (archivos temporales de qbittorrent/amule)
-MEDIADIR=/home/usuario/datos
+MEDIADIR=/data
+# User and group ID
+PUID=1000
+PGID=1000
 # Zona horaria (ej: America/Buenos_Aires)
 TZ=America/Buenos_Aires
 # Idioma (ej: es, en)
@@ -19,10 +22,19 @@ LANG=es
 AMULE_GUI_PWD=tu_clave_aqui
 AMULE_WEBUI_PWD=tu_clave_web_aqui
 
+## qbittorrent
+QBIT_WEBUI_PWD=tu_clave_aqui
+QBIT_WEBUI_PORT=8080
+QBIT_TORRENTING_PORT=6881
+
 # --- PI-HOLE ---
 PIHOLE_WEBPASSWORD=tu_password_admin_aqui
 # IP local del servidor (necesario para Pi-hole)
 PIHOLE_DIRECCIONIP=192.168.x.x
+
+# homarr
+# Generate using openssl rand -hex 32
+SECRET_ENCRYPTION_KEY=your_hex_key_here
 
 # --- WIREGUARD (VPN) ---
 # Tu dirección IP pública o dominio dinámico
@@ -36,3 +48,31 @@ WG_PORT=51820
 WG_DEFAULT_ADDRESS=10.8.0.x
 WG_MTU=1420
 WG_ALLOWED_IPS=192.168.x.0/24
+
+
+# --- API KEYS (se generan en cada servicio tras primer inicio) ---
+# Prowlarr API Key (obtener desde Settings > General > Security)
+PROWLARR_API_KEY=
+# Radarr API Key (obtener desde Settings > General > Security)
+RADARR_API_KEY=
+# Sonarr API Key (obtener desde Settings > General > Security)
+SONARR_API_KEY=
+# Lidarr API Key (obtener desde Settings > General > Security)
+LIDARR_API_KEY=
+# Homarr API Key (obtener desde Settings > General > Security)
+HOMARR_API_KEY=
+# Readarr API Key (obtener desde Settings > General > Security)
+READARR_API_KEY=
+# Bazarr API Key (obtener desde Settings > General > Security)
+BAZARR_API_KEY=
+
+# --- URLS INTERNAS (para configuración cruzada) ---
+PROWLARR_URL=http://prowlarr:9696
+RADARR_URL=http://radarr:7878
+SONARR_URL=http://sonarr:8989
+LIDARR_URL=http://lidarr:8686
+HOMARR_URL=http://homarr:7575
+READARR_URL=http://readarr:8787
+BAZARR_URL=http://bazarr:6767
+QBITTORRENT_URL=http://qbittorrent:8080
+AMULE_URL=http://amule:4711
